<resources>
    <string name="app_name">DAW</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="search">Search</string>
    <string name="run">Run</string>
    <string name="camera_name_primary">Primary Camera Name</string>
    <string name="camera_name_secondary">Secondary Camera Name</string>
    <string name="camera_side_primary">Primary Camera Side</string>
    <string name="camera_side_secondary">Secondary Camera Side</string>
    <string name="focus_point">Focus Point</string>
    <string name="metering_point">Metering Point</string>
    <string name="gimbal_control">Gimbal Control</string>
    <string name="display_grid">Display Grid</string>
    <string name="txt_grid_overlay_selection">Change Grid Overlay Type: </string>
    <string name="txt_center_point_selection">Change Center Point Type: </string>
    <string name="txt_video_feed_selection">Change Video Source: </string>
    <string name="txt_video_dynamic_size">Test FPV widget view in different size: </string>
    <string name="grid_type_none">None</string>
    <string name="grid_type_parallel">Parallel</string>
    <string name="grid_type_parallel_diagonal">Parallel with Diagonals</string>
    <string name="set_auto_video_feed">Auto</string>
    <string name="set_primary_video_feed">Primary</string>
    <string name="set_secondary_video_feed">Secondary</string>
    <string name="set_fpv_size">Resize</string>
    <string name="sdk_version">Version: %1$s</string>
    <string name="textViewCambioPassword">Cambio Contraseña</string>
    <string name="provider_google_maps">Google Maps</string>
    <string name="provider_here_maps">Here Maps</string>
    <string name="provider_amaps">AMaps</string>
    <string name="provider_mapbox">Mapbox</string>
    <string name="error_map_not_initialized">The map has not been initialized yet</string>
    <string name="home_direction">Home Direction</string>
    <string name="auto_frame">Auto Frame</string>
    <string name="unlock_flyzones">Unlock Fly Zones</string>
    <string name="show_flight_path">Show Flight Path</string>
    <string name="show_home_point">Show Home Point</string>
    <string name="show_gimbal_yaw">Show Gimbal Yaw</string>
    <string name="clear_flight_path">Clear Flight Path</string>
    <string name="replace_icon">Replace Icon</string>
    <string name="fly_zone">Fly Zone</string>
    <string name="fly_zone_legend">Fly Zone Legend</string>
    <string name="dji_account_indicator">DJI Account Login Indicator</string>
    <string name="new_color">New Color</string>
    <string name="sync">Sync</string>
    <string-array name="iconArray">
        <item>Aircraft</item>
        <item>Home</item>
        <item>Gimbal Yaw</item>
        <item>Locked Zone</item>
        <item>Unlocked Zone</item>
    </string-array>
    <string-array name="mapTypeArray">
        <item>Standard</item>
        <item>Satellite</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="lineTypeArray">
        <item>Home Direction</item>
        <item>Flight Path</item>
        <item>Fly Zone Border</item>
    </string-array>

    <string name="mapbox_id">Please enter the map box key here.</string>
    <string name="utilizando_todos_los_componentes">Utilizando Todos los componentes</string>
    <string name="interfaz_personalizada">Interfaz personalizada</string>
    <string name="medelo_mapas">Medelo mapas</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ganp">GANP</string>
    <string name="passwordLogin" />
    <string name="emailLogin">Email</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="recuperar_password">Recuperar Password</string>
    <string name="v_1_0">V.1.0</string>
    <string name="password">password</string>
    <string name="con_daw_puedes_programar_tus_rutas_de_vuelo_y_almacenarlas_de_manera_automatizada">Con DAW puedes programar tus rutas de vuelo y almacenarlas de manera automatizada</string>
    <string name="ahorra_tiempo">Ahorra Tiempo</string>
    <string name="vamos_a_volar">Vamos a volar!</string>
    <string name="localiza_tus_drones">Localiza Tus Drones</string>
    <string name="programa_tus_vuelos">Programa Tus Vuelos</string>
    <string name="registro">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="email" />
    <string name="registrar">Registrar</string>
    <string name="apellidos">Apellidos</string>
    <string name="pais">País</string>
    <string name="passwordRegistro">Password</string>
    <string name="passwordConfirmar">Password</string>
    <string name="nombre_apellido">Nombres</string>
    <string name="correo">Correo:</string>
    <string name="tipoUsuarioProfile">Tipo Usuario:</string>
    <string name="tokenProfile">Token ID:</string>
    <string name="direccion_servidor">Direccion Servidor</string>
    <string name="configuracion_red">Configuracion Red</string>
    <string name="nuevo_password">Nuevo Password</string>
    <string name="cambio_password">Cambio Password</string>
    <string name="puerto">Puerto</string>
    <string name="password_anterior">Password Anterior</string>
    <string name="confirmar">Confirmar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="profile">Profile</string>
    <string name="multimedia">MULTIMEDIA</string>
    <string name="eventos">Eventos</string>
    <string name="volarBtn">Volar</string>
    <string name="volarBtnText">Volar</string>
    <string name="regresarBtn">Regresar</string>
    <string name="map_settings">Map Settings</string>
    <string name="center_map">Center Map</string>
    <string name="map_overlay">Map Overlay</string>
    <string name="flyzone_settings">FlyZone Settings</string>
    <string name="flight_settings">Flight Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="icon_change_setting">Icon Change Setting</string>
    <string name="line_color_setting">Line Color Setting</string>
    <string name="all">All</string>
    <string name="authorization">Authorization</string>
    <string name="warning">Warning</string>
    <string name="enhanced_warning">Enhanced Warning</string>
    <string name="restricted">Restricted</string>
    <string name="maximum_height">Maximum Height</string>
    <string name="self_unlocked">Self Unlocked</string>
    <string name="custom_unlocked_zone">Custom Unlocked Zone</string>
    <string name="regresar">Regresar</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="textViewCambioIP">IP Remota</string>
    <string name="editTextHint">IP</string>
    <string name="editTextNuevo_passwordHint">Nuevo Password</string>
    <string name="confirmarPasswdBtn">Confirmar</string>
    <string name="textViewSincronizacion">Sincronización</string>
    <string name="editTextSincronizacionMin">1</string>
    <string name="textViewVideoSinc">Sincronizar Video Cada:</string>
    <string name="textEditVideoSinc">1</string>
    <string name="textViewImgSinc">Sincronizar Imágenes Cada</string>
    <string name="editTextBridgeTest">IP</string>
    <string name="buttonRegresarConfig">Regresar</string>
    <string name="layoutHome">TODO</string>
    <string name="usuario">usuarioLogin</string>
    <string name="usuarioLogin">usuarioLogin</string>
    <string name="correoRegistro">correo</string>
    <string name="logoLogin">LOGO</string>

</resources>
