<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:theme="@style/Theme.AppCompat"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="162dp"
        android:layout_height="194dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/ic_fondosplashoutlines"/>

    <TextView
        android:id="@+id/textViewNombreFullProfile"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="153dp"
        android:text="@string/nombre_apellido"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCorreoProfile"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/correo"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreFullProfile" />

    <TextView
        android:id="@+id/textViewTipoUsuarioProfile"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/tipoUsuarioProfile"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreoProfile" />

    <TextView
        android:id="@+id/textViewTokenLoginProfile"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="89dp"
        android:text="@string/tokenProfile"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegresarProfile"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoUsuarioProfile" />

    <Button
        android:id="@+id/buttonRegresarProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresarBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>