<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_lastHorizontalStyle="spread_inside"
    tools:context=".Configuracion">

    <TextView
        android:id="@+id/textViewICambioIPBridge"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="746dp"
        android:text="@string/textViewCambioIP"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="135dp"
        android:layout_height="28dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="690dp"
        android:autofillHints=""
        android:digits="0123456789.\n"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/editTextHint"
        android:imeOptions="actionDone"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewICambioIPBridge"
        tools:ignore="RtlHardcoded,TextFields" />

    <TextView
        android:id="@+id/textViewImgSinc"
        android:layout_width="171dp"
        android:layout_height="19dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="208dp"
        android:text="@string/textViewImgSinc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextSicronizacionImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSincronizacionImg"
        app:layout_constraintVertical_bias="0.369" />

    <TextView
        android:id="@+id/textViewCambioPassword"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="689dp"
        android:text="@string/textViewCambioPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIP" />

    <EditText
        android:id="@+id/editTextCambioPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="135dp"
        android:layout_height="28dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="left"
        android:hint="@string/editTextNuevo_passwordHint"
        android:imeOptions="actionDone"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCambioPassword"
        tools:ignore="RtlHardcoded,TextFields" />

    <TextView
        android:id="@+id/textViewSincronizacionImg"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="719dp"
        android:text="@string/textViewSincronizacion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCambioPassword" />

    <Button
        android:id="@+id/buttonConfirmarPassw"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:text="@string/confirmarPasswdBtn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextCambioPassword2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <TextView
        android:id="@+id/textViewVideoSinc"
        android:layout_width="149dp"
        android:layout_height="19dp"
        android:layout_marginStart="248dp"
        android:layout_marginBottom="208dp"
        android:text="@string/textViewVideoSinc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSincronizacionImg"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/editTextSicronizacionImg"
        android:layout_width="33dp"
        android:layout_height="28dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="208dp"
        android:autofillHints=""
        android:digits="a-z0123456789.\n"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/editTextSincronizacionMin"
        android:imeOptions="actionDone"
        android:maxLength="2"
        android:maxLines="1"
        android:padding="0dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCambioPassword2"
        app:layout_constraintVertical_bias="0.367"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextSicronizacionVideo"
        android:layout_width="33dp"
        android:layout_height="28dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="480dp"
        android:layout_marginBottom="208dp"
        android:autofillHints=""
        android:digits="0123456789.\n"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textEditVideoSinc"
        android:imeOptions="actionDone"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="0dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/textViewImgSinc"
        app:layout_constraintTop_toBottomOf="@+id/editTextCambioPassword2"
        app:layout_constraintVertical_bias="0.367"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextCambioPassword2"
        android:layout_width="135dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="left"
        android:hint="@string/editTextNuevo_passwordHint"
        android:imeOptions="actionDone"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/editTextCambioPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextCambioPassword"
        tools:ignore="RtlHardcoded,TextFields" />

    <Button
        android:id="@+id/buttonRegresarConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="755dp"
        android:layout_marginBottom="12dp"
        android:text="@string/buttonRegresarConfig"
        app:layout_constraintBottom_toTopOf="@+id/textViewICambioIPBridge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>